@@ -155,10 +155,6 @@ Recent Bugs
 * bump shader seems to be busted.  only renders as flat by itself and
   stacked with phong it seems to ignore the uv settings.
 
-* rtweight prints incorrect units when units are set to ft.  Appears
-  to trace back to unit handling in view_end in viewweight.c.  This
-  logic should be replaced using the proper libbu functions.
-
 * the graphics window does not acquire keybinding focus in mged on
   ubuntu linux.  key events go to the command window even with the
   graphics window has focus.
